# roboracer-autodrive-ws

./: .gitignore  README.md  current-pip-freeze.txt  node_used_in_race_1  requirements.txt  steps.md
TUMRepoRes/: README.md
TUMRepoRes/outputs/: traj_race_cl_mincurv.csv  traj_race_cl_mintime.csv  traj_race_cl_shortest_path.csv
WaterlooRepoRes/: README.md  map_converter.ipynb  requirements.txt
WaterlooRepoRes/maps/: map_clean_gimp.pgm
foxglove-exports/: Car Control.json  Distance and Steering.json
maps/: map.pgm  map.yaml  map_clean_gimp.yaml  simple_map.pgm  simple_map.yaml  simple_map_2.pgm  simple_map_2.yaml
roboracer_flagged_data/wall_follow/: flagged_data_latest.json
src/autodrive_f1tenth/autodrive_f1tenth/: autodrive_incoming_bridge.py  (+1 more)
src/car_control_pub_sub/: package.xml  setup.cfg  setup.py
src/gap_follow_ui_control/: CMakeLists.txt  package.xml
src/pure_pursuit/: CMakeLists.txt  package.xml
src/roboracer_interfaces/: CMakeLists.txt  package.xml
src/safety_node/: CMakeLists.txt  package.xml  setup.py
src/simple_map/: CMakeLists.txt  README.md  package.xml
src/wall_follow/: package.xml  setup.py
src/wall_follow_ui_control/: CMakeLists.txt  package.xml  steps.md
src/wall_follow_ui_control/config/: wall_follow_params.json
src/wall_follow_ui_control/launch/: wall_follow_ui_control.launch.py
src/wall_follow_ui_control/scripts/: wall_follow_get_params.py  wall_follow_ui_control_node.py
src/wall_follow_ui_control/src/: wall_follow_ui_control_node.cpp
waypoints/: centerline_waypoints_Jun27.csv  waypoints_Jun27.csv
(+41 files in other folders)
